Fix CSS: make row of 100 td invisible

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,12 @@ body, html{
     /* display: flex;
     flex-direction: row; */
 }
+.td100, .td100 *{
+    display: block;
+    height: 0;
+    visibility: hidden;
+    border: 0;
+}
 .creneaux{
     width: 100%;
     display: flex;
